--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,14 @@
-<div class="row">
-  <div class="col-6">
-    <button mat-raised-button color="primary">Primary</button>
-  </div>
-  <div class="col-6">
-    <button mat-raised-button color="accent">Accent</button>
+<div class="container">
+  <div class="row">
+    <div class="col-9">
+      <mat-card>
+        <button mat-raised-button color="primary">Primary</button>
+      </mat-card>
+    </div>
+    <div class="col-3">
+      <mat-card>
+        <button mat-raised-button color="accent">Accent</button>
+      </mat-card>
+    </div>
   </div>
 </div>
