--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,14 @@
-<div class="container">
+<br />
+<br />
+<div class="container-fluid">
   <div class="row">
     <div class="col-9">
-      <mat-card>
+      <mat-card class="mat-elevation-z4">
         <button mat-raised-button color="primary">Primary</button>
       </mat-card>
     </div>
     <div class="col-3">
-      <mat-card>
+      <mat-card class="mat-elevation-z4">
         <button mat-raised-button color="accent">Accent</button>
       </mat-card>
     </div>
