--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,17 @@
-<br />
-<br />
-<div class="container-fluid">
-  <div class="row">
-    <div class="col-9">
-      <mat-card class="mat-elevation-z4">
-        <button mat-raised-button color="primary">Primary</button>
-      </mat-card>
-    </div>
-    <div class="col-3">
-      <mat-card class="mat-elevation-z4">
-        <button mat-raised-button color="accent">Accent</button>
-      </mat-card>
+<section class="cover"></section>
+<section class="content">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-9">
+        <mat-card class="mat-elevation-z4">
+          <button mat-raised-button color="primary">Primary</button>
+        </mat-card>
+      </div>
+      <div class="col-3">
+        <mat-card class="mat-elevation-z4">
+          <button mat-raised-button color="accent">Accent</button>
+        </mat-card>
+      </div>
     </div>
   </div>
-</div>
+</section>
