--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -8,11 +8,18 @@
 
 html,
 body {
-  // background-color: var(--primary);
   height: 100%;
 }
 
 body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+section {
+  margin-bottom: 20px;
+
+  &:last-child {
+    margin-bottom: 0;
+  }
 }
