Create cover section

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,14 @@
-<section class="cover"></section>
+<section class="cover">
+  <div class="container">
+    <div class="title">
+      <h1>Matt Blum</h1>
+    </div>
+    <div class="description">
+      <h3>Front-End Developer</h3>
+    </div>
+  </div>
+</section>
+
 <section class="content">
   <div class="container-fluid">
     <div class="row">
