--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,11 +6,16 @@
     <div class="description">
       <h3>Front-End Developer</h3>
     </div>
+    <div class="down">
+      <mat-icon aria-hidden="false" aria-label="Down Arrow"
+        >chevron_right</mat-icon
+      >
+    </div>
   </div>
 </section>
 
 <section class="content">
-  <div class="container-fluid">
+  <div class="container">
     <div class="row">
       <div class="col-9">
         <mat-card class="mat-elevation-z4">
