Animate the down arrow

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,10 +6,15 @@
     <div class="description">
       <h3>Front-End Developer</h3>
     </div>
-    <div class="down">
-      <mat-icon aria-hidden="false" aria-label="Down Arrow"
-        >chevron_right</mat-icon
-      >
+    <div class="down-wrapper">
+      <div class="down">
+        <mat-icon
+          aria-hidden="false"
+          aria-label="Down Arrow"
+          class="animate__animated animate__pulse animate__infinite"
+          >chevron_right</mat-icon
+        >
+      </div>
     </div>
   </div>
 </section>
