Update down arrow animation so it animates as intended

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
           aria-hidden="false"
           aria-label="Down Arrow"
           class="animate__animated animate__pulse animate__infinite"
-          >chevron_right</mat-icon
+          >keyboard_arrow_down</mat-icon
         >
       </div>
     </div>
