Switch to keyframe animation strategy

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,12 +8,10 @@
     </div>
     <div class="down-wrapper">
       <div class="down">
-        <mat-icon
-          aria-hidden="false"
-          aria-label="Down Arrow"
-          class="animate__animated animate__pulse animate__infinite"
+        <mat-icon aria-hidden="false" aria-label="Down Arrow"
           >keyboard_arrow_down</mat-icon
         >
+        <!-- class="animate__animated animate__pulse animate__infinite" -->
       </div>
     </div>
   </div>
