--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,8 +3,8 @@ $cover-height: 100vh;
   //   background-image: url("../assets/images/cover/attack-on-titan.jpg");
   //   background-image: url("../assets/images/cover/freedom-flight.jpg");
   background: linear-gradient(
-      rgba(11, 198, 227, 0.75),
-      rgba(208, 168, 92, 0.75)
+      rgba(208, 168, 92, 0.75),
+      rgba(11, 198, 227, 0.75)
     ),
     url("../assets/images/cover/tokyo-ghoul.png");
   //   background-image: url("../assets/images/cover/your-name-1.png");
@@ -81,5 +81,28 @@ $cover-height: 100vh;
   mat-icon {
     font-size: 63px;
     width: 63px;
+
+    position: relative;
+    top: 5px;
+
+    -webkit-animation: action 1s infinite alternate;
+    animation: action 1s infinite alternate;
+  }
+}
+
+@-webkit-keyframes action {
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(-10px);
+  }
+}
+@keyframes action {
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(-10px);
   }
 }
