Add subtle intro animations

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -90,6 +90,10 @@ $cover-height: 100vh;
   }
 }
 
+.animate__delay-05s {
+  animation-delay: 0.5s;
+}
+
 @-webkit-keyframes action {
   0% {
     transform: translateY(0);
