--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,16 @@
 <section class="cover">
   <div class="container">
     <div class="title">
-      <h1>Matt Blum</h1>
+      <h1 class="animate__animated animate__fadeInRight">Matt Blum</h1>
     </div>
     <div class="description">
-      <h3>Front-End Developer</h3>
+      <h3 class="animate__animated animate__fadeInLeft animate__delay-05s">
+        Front-End Developer
+      </h3>
     </div>
-    <div class="down-wrapper">
+    <div
+      class="down-wrapper animate__animated animate__fadeInUp animate__delay-1s"
+    >
       <div class="down">
         <mat-icon aria-hidden="false" aria-label="Down Arrow"
           >keyboard_arrow_down</mat-icon
