--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,11 +3,24 @@
     <div class="title">
       <h1 class="animate__animated animate__fadeInRight">Matt Blum</h1>
     </div>
+    <!-- .title -->
+
     <div class="description">
       <h3 class="animate__animated animate__fadeInLeft animate__delay-05s">
         Front-End Developer
       </h3>
     </div>
+    <!-- .description -->
+
+    <div class="cta">
+      <button mat-raised-button color="accent">
+        <mat-icon>linkedin</mat-icon>LinkedIn
+      </button>
+      <button mat-raised-button color="primary">
+        <mat-icon>email</mat-icon>Contact Me
+      </button>
+    </div>
+
     <div
       class="down-wrapper animate__animated animate__fadeInUp animate__delay-1s"
       (click)="scrollToId('content')"
@@ -16,9 +29,9 @@
         <mat-icon aria-hidden="false" aria-label="Down Arrow"
           >keyboard_arrow_down</mat-icon
         >
-        <!-- class="animate__animated animate__pulse animate__infinite" -->
       </div>
     </div>
+    <!-- .down-wrapper -->
   </div>
 </section>
 
@@ -28,12 +41,11 @@
       <div class="col-9">
         <mat-card class="mat-elevation-z4">
           <button mat-raised-button color="primary">Primary</button>
+          <button mat-raised-button color="accent">Accent</button>
         </mat-card>
       </div>
       <div class="col-3">
-        <mat-card class="mat-elevation-z4">
-          <button mat-raised-button color="accent">Accent</button>
-        </mat-card>
+        <mat-card class="mat-elevation-z4"> </mat-card>
       </div>
     </div>
   </div>
