--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,15 +1,19 @@
 $cover-height: 100vh;
 .cover {
-  //   background-image: url("../assets/images/cover/attack-on-titan.jpg");
+  // background-image: url("../assets/images/cover/attack-on-titan.jpg");
   //   background-image: url("../assets/images/cover/freedom-flight.jpg");
+  //   background: linear-gradient(
+  //       rgba(208, 168, 92, 0.75),
+  //       rgba(11, 198, 227, 0.75)
+  //     ),
+  //     url("../assets/images/cover/tokyo-ghoul.png");
+  //   background-image: url("../assets/images/cover/your-name-1.png");
+  //   background-image: url("../assets/images/cover/your-name-4.png");
   background: linear-gradient(
       rgba(208, 168, 92, 0.75),
       rgba(11, 198, 227, 0.75)
     ),
-    url("../assets/images/cover/tokyo-ghoul.png");
-  //   background-image: url("../assets/images/cover/your-name-1.png");
-  //   background-image: url("../assets/images/cover/your-name-4.png");
-  //   background-image: url("../assets/images/cover/your-name-5.png");
+    url("../assets/images/cover/your-name-5.png");
   //   background-image: url("../assets/images/cover/your-name-6.png");
   //   background-image: url("../assets/images/cover/your-name-8.png");
 
