--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -57,12 +57,52 @@ $cover-height: 100vh;
     h3 {
       font-size: 28px;
       font-weight: 200;
+
+      margin-block-start: 1em;
+      margin-block-end: 1em;
+      margin-inline-start: 0px;
+      margin-inline-end: 0px;
+    }
+  }
+
+  .cta {
+    a.mat-raised-button {
+      mat-icon.mat-icon {
+        margin-right: 4px;
+      }
+    }
+  }
+}
+
+aside {
+  margin-right: 15px;
+  width: 110px;
+
+  ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+
+    li {
+      align-items: center;
+      background-color: var(--black);
+      color: var(--white);
+      display: flex;
+      height: 80px;
+      justify-content: center;
+      border-bottom: 1px solid var(--white);
+
+      &.active {
+        background-color: var(--primary);
+      }
     }
   }
 }
 
 .content {
-  height: 100vh;
+  section mat-card {
+    height: 20vh;
+  }
 }
 
 .down-wrapper {
@@ -73,7 +113,7 @@ $cover-height: 100vh;
   align-items: center;
   justify-content: center;
   position: absolute;
-  right: 5%;
+  right: 15px;
   width: 110px;
   height: 80px;
 
@@ -96,6 +136,10 @@ $cover-height: 100vh;
 
 .animate__delay-05s {
   animation-delay: 0.5s;
+}
+
+.animate__delay-15s {
+  animation-delay: 1.5s;
 }
 
 @-webkit-keyframes action {
