--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,9 +6,9 @@
     <!-- .title -->
 
     <div class="description">
-      <h3 class="animate__animated animate__fadeInLeft animate__delay-05s">
+      <h2 class="animate__animated animate__fadeInLeft animate__delay-05s">
         Front-End Developer
-      </h3>
+      </h2>
     </div>
     <!-- .description -->
 
@@ -26,7 +26,7 @@
 
     <div
       class="down-wrapper animate__animated animate__fadeInUp animate__delay-15s"
-      (click)="scrollToId('content')"
+      (click)="scrollToId('skills')"
     >
       <div class="down">
         <mat-icon aria-hidden="false" aria-label="Down Arrow"
@@ -38,43 +38,34 @@
   </div>
 </section>
 
-<section class="content" id="content">
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col">
-        <section id="skills">
-          <mat-card class="mat-elevation-z4">
-            <h2>Skills</h2>
-          </mat-card>
-        </section>
+<section id="skills">
+  <div class="container">
+    <h2 class="label">Skills</h2>
+    <hr />
+    <p>Content</p>
+  </div>
+</section>
 
-        <section id="experience">
-          <mat-card class="mat-elevation-z4">
-            <h2>Experience</h2>
-          </mat-card>
-        </section>
+<section id="experience">
+  <div class="container">
+    <h2 class="label">Experience</h2>
+    <hr />
+    <p>Content</p>
+  </div>
+</section>
 
-        <section id="education">
-          <mat-card class="mat-elevation-z4">
-            <h2>Education</h2>
-          </mat-card>
-        </section>
+<section id="education">
+  <div class="container">
+    <h2 class="label">Education</h2>
+    <hr />
+    <p>Content</p>
+  </div>
+</section>
 
-        <section id="projects">
-          <mat-card class="mat-elevation-z4">
-            <h2>Projects</h2>
-          </mat-card>
-        </section>
-      </div>
-
-      <aside>
-        <ul>
-          <li (click)="scrollToId('skills')">Skills</li>
-          <li (click)="scrollToId('experience')" class="active">Experience</li>
-          <li (click)="scrollToId('education')">Education</li>
-          <li (click)="scrollToId('projects')">Projects</li>
-        </ul>
-      </aside>
-    </div>
+<section id="projects">
+  <div class="container">
+    <h2 class="label">Projects</h2>
+    <hr />
+    <p>Content</p>
   </div>
 </section>
