--- a/src/styles/base/_colors.scss
+++ b/src/styles/base/_colors.scss
@@ -4,5 +4,6 @@
   --secondary: rgb(208, 168, 92);
   --secondary-hex: #d0a85c;
   --white: rgb(255, 255, 255);
+  --off-white: #fffafa;
   --black: rgb(0, 0, 0);
 }
