--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,4 +1,5 @@
 @import "~@angular/material/theming";
+// @import "~bootstrap/dist/css/bootstrap.min";
 @import "~bootstrap/dist/css/bootstrap-grid.min";
 
 @import "./base/colors";
@@ -16,6 +17,43 @@ body {
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
+hr {
+  border: 0;
+  border-top: 1px solid #ccc;
+  display: block;
+  height: 1px;
+  margin: 1em 0;
+  padding: 0;
+}
+
 section {
   margin-bottom: 20px;
+
+  &:last-child {
+    margin-bottom: 0;
+  }
+}
+
+.mat-typography {
+  // h1,
+  // h2,
+  // h3,
+  // h4,
+  // h5,
+  // h6 {
+  //   margin-block-start: 1em;
+  //   margin-block-end: 1em;
+  //   margin-inline-start: 0px;
+  //   margin-inline-end: 0px;
+  // }
+
+  h1 {
+    font-size: 63px;
+    font-weight: 500;
+  }
+
+  h2 {
+    font-size: 28px;
+    font-weight: 500;
+  }
 }
