--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,22 +1,11 @@
 $cover-height: 100vh;
 
 .cover {
-  // background-image: url("../assets/images/cover/attack-on-titan.jpg");
-  //   background-image: url("../assets/images/cover/freedom-flight.jpg");
-  //   background: linear-gradient(
-  //       rgba(208, 168, 92, 0.75),
-  //       rgba(11, 198, 227, 0.75)
-  //     ),
-  //     url("../assets/images/cover/tokyo-ghoul.png");
-  //   background-image: url("../assets/images/cover/your-name-1.png");
-  //   background-image: url("../assets/images/cover/your-name-4.png");
-  background: linear-gradient(
-      rgba(208, 168, 92, 0.75),
-      rgba(11, 198, 227, 0.75)
-    ),
-    url("../assets/images/cover/your-name-5.png");
-  //   background-image: url("../assets/images/cover/your-name-6.png");
-  //   background-image: url("../assets/images/cover/your-name-8.png");
+  background: linear-gradient(rgba(11, 198, 227, 0.5), rgba(11, 198, 227, 0.5)),
+    url("../assets/images/cover/your-name.png");
+  // url("../assets/images/cover/your-name-2.png");
+  // url("../assets/images/cover/your-name-3.png");
+  // url("../assets/images/cover/tokyo-ghoul.png");
 
   align-items: center;
   background-attachment: fixed;
@@ -28,6 +17,7 @@ $cover-height: 100vh;
   flex-direction: column;
   height: $cover-height;
   justify-content: center;
+  margin: 0;
 
   mat-card {
     background: var(--primary);
@@ -116,16 +106,16 @@ section {
 }
 
 .down-wrapper {
-  background-color: var(--black);
+  background-color: var(--secondary);
   bottom: 0;
   cursor: pointer;
   display: flex;
   align-items: center;
   justify-content: center;
   position: absolute;
-  right: 15px;
-  width: 110px;
-  height: 80px;
+  right: 5%;
+  width: 80px;
+  height: 60px;
 
   .down {
     align-items: baseline;
