--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -27,33 +27,22 @@ hr {
 }
 
 section {
-  margin-bottom: 20px;
-
-  &:last-child {
-    margin-bottom: 0;
-  }
+  padding: 20px 0;
 }
 
 .mat-typography {
-  // h1,
-  // h2,
-  // h3,
-  // h4,
-  // h5,
-  // h6 {
-  //   margin-block-start: 1em;
-  //   margin-block-end: 1em;
-  //   margin-inline-start: 0px;
-  //   margin-inline-end: 0px;
-  // }
-
   h1 {
     font-size: 63px;
     font-weight: 500;
   }
 
   h2 {
-    font-size: 28px;
+    font-size: 54px;
     font-weight: 500;
+  }
+
+  h3 {
+    font-size: 28px;
+    font-weight: 200;
   }
 }
