--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -19,7 +19,7 @@ body {
 
 hr {
   border: 0;
-  border-top: 1px solid #ccc;
+  border-top: 1px solid var(--gray);
   display: block;
   height: 1px;
   margin: 1em 0;
