--- a/src/styles/base/_colors.scss
+++ b/src/styles/base/_colors.scss
@@ -1,10 +1,22 @@
 :root {
-  --primary: rgb(11, 198, 227);
-  --primary-hex: #0bc6e3;
-  --secondary: rgb(208, 168, 92);
-  --secondary-hex: #d0a85c;
+  --primary: rgb(103, 58, 183);
+  --primary-hex: #673ab7;
+  --secondary: rgb(255, 215, 64);
+  --secondary-hex: #ffd740;
   --white: rgb(255, 255, 255);
   --off-white: #fffafa;
   --black: rgb(0, 0, 0);
   --gray: #ccc;
+  --dark-gray: #333;
 }
+
+// :root {
+//   --primary: rgb(11, 198, 227);
+//   --primary-hex: #0bc6e3;
+//   --secondary: rgb(208, 168, 92);
+//   --secondary-hex: #d0a85c;
+//   --white: rgb(255, 255, 255);
+//   --off-white: #fffafa;
+//   --black: rgb(0, 0, 0);
+//   --gray: #ccc;
+// }
