--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -53,11 +53,11 @@ mat-card {
 
     .title {
       background-color: var(--primary);
+      // box-shadow: 5px 5px var(--secondary);
       color: var(--white);
       float: left;
       font-size: 36px;
-      margin: 20px 0 0;
-      // max-width: 75%;
+      margin: 40px 0 0;
       padding: 30px;
     }
 
@@ -68,6 +68,8 @@ mat-card {
       font-size: 12px;
       letter-spacing: 1px;
       line-height: 1.5;
+      min-height: 50px;
+      min-width: 200px;
       padding: 16px 30px;
       text-transform: uppercase;
     }
