--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -47,6 +47,16 @@
 </section>
 <!-- .cover -->
 
+<nav>
+  <ul>
+    <li (click)="scrollToId('profile')">Profile</li>
+    <li (click)="scrollToId('skills')" class="active">Skills</li>
+    <li (click)="scrollToId('projects')">Projects</li>
+    <li (click)="scrollToId('experience')">Experience</li>
+    <li (click)="scrollToId('education')">Education</li>
+  </ul>
+</nav>
+
 <div class="container">
   <section id="header" class="header">
     <h1 class="side-title">
@@ -55,10 +65,10 @@
   </section>
   <!-- #header -->
 
-  <mat-card id="about">
+  <mat-card id="profile">
     <div class="header">
-      <h2 class="title">About</h2>
-      <div class="title-blurb">Something, something, something</div>
+      <h2 class="title">Profile</h2>
+      <div class="title-blurb">About me</div>
       <div class="clear-fix"></div>
     </div>
     <!-- .header -->
@@ -70,7 +80,7 @@
   <mat-card id="skills">
     <div class="header">
       <h2 class="title">Skills</h2>
-      <div class="title-blurb">Something, something, something</div>
+      <div class="title-blurb">Skills blurb</div>
       <div class="clear-fix"></div>
     </div>
     <!-- .header -->
@@ -104,7 +114,7 @@
   <mat-card id="projects">
     <div class="header">
       <h2 class="title">Projects</h2>
-      <div class="title-blurb">Something, something, something</div>
+      <div class="title-blurb">Projects blurb</div>
       <div class="clear-fix"></div>
     </div>
     <!-- .header -->
@@ -116,7 +126,7 @@
   <mat-card id="experience">
     <div class="header">
       <h2 class="title">Experience</h2>
-      <div class="title-blurb">Something, something, something</div>
+      <div class="title-blurb">Experience blurb</div>
       <div class="clear-fix"></div>
     </div>
     <!-- .header -->
@@ -128,7 +138,7 @@
   <mat-card id="education">
     <div class="header">
       <h2 class="title">Education</h2>
-      <div class="title-blurb">Something, something, something</div>
+      <div class="title-blurb">Education blurb</div>
       <div class="clear-fix"></div>
     </div>
     <!-- .header -->
