--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -2,7 +2,7 @@
 // @import "~bootstrap/dist/css/bootstrap.min";
 @import "~bootstrap/dist/css/bootstrap-grid.min";
 
-@import "./base/animations";
+// @import "./base/animations";
 @import "./base/colors";
 @import "./base/lib";
 @import "./components/mat-buttons";
