Update fadeIn animations and resolve down arrow animation issue

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,22 +1,22 @@
 <section class="cover">
   <div class="cover-content">
-    <h1 class="title" wmAnimate="fadeInDown" aos>Matt Blum</h1>
+    <h1 class="title" wmAnimate="fadeInUp" aos>Matt Blum</h1>
     <!-- .title -->
 
-    <hr wmAnimate="fadeInLeft" aos delay="250ms" />
+    <hr wmAnimate="fadeIn" aos delay="250ms" />
 
-    <h3 class="description" wmAnimate="fadeInRight" aos delay="500ms">
+    <h3 class="description" wmAnimate="fadeInDown" aos delay="500ms">
       Front-End Developer
     </h3>
     <!-- .description -->
 
     <div class="cta">
-      <div class="button-wrapper" wmAnimate="fadeInUp" aos delay="750ms">
+      <div class="button-wrapper" wmAnimate="fadeInDown" aos delay="750ms">
         <a href="mailto:matt.blum@live.com" mat-raised-button color="primary">
           <mat-icon>email</mat-icon>Contact Me
         </a>
       </div>
-      <div class="button-wrapper" wmAnimate="fadeInRight" aos delay="1000ms">
+      <div class="button-wrapper" wmAnimate="fadeInDown" aos delay="1000ms">
         <button mat-raised-button color="primary">
           <mat-icon>cloud_download</mat-icon>PDF Version
         </button>
